--- a/Views/User/Dashboard.cshtml
+++ b/Views/User/Dashboard.cshtml
@@ -89,12 +89,35 @@
                                                 @currentBorrowing.DueDate.ToString("dd/MM/yyyy")
                                                 @if (currentBorrowing.IsOverdue)
                                                 {
-                                                    <span class="badge bg-danger ms-2">Terlambat @currentBorrowing.DaysOverdue hari</span>
+                                                    <span class="badge bg-danger ms-2">
+                                                        <i class="bi bi-exclamation-triangle me-1"></i>
+                                                        Terlambat @currentBorrowing.DaysOverdue hari
+                                                    </span>
                                                 }
                                                 else
                                                 {
-                                                    var daysLeft = (currentBorrowing.DueDate - DateTime.UtcNow).Days;
-                                                    <span class="badge bg-success ms-2">@daysLeft hari lagi</span>
+                                                    var daysLeft = (currentBorrowing.DueDate.Date - DateTime.UtcNow.Date).Days;
+                                                    if (daysLeft <= 1)
+                                                    {
+                                                        <span class="badge bg-warning text-dark ms-2">
+                                                            <i class="bi bi-clock me-1"></i>
+                                                            @(daysLeft == 0 ? "Jatuh tempo hari ini!" : "1 hari lagi")
+                                                        </span>
+                                                    }
+                                                    else if (daysLeft <= 3)
+                                                    {
+                                                        <span class="badge bg-warning text-dark ms-2">
+                                                            <i class="bi bi-clock me-1"></i>
+                                                            @daysLeft hari lagi
+                                                        </span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="badge bg-success ms-2">
+                                                            <i class="bi bi-clock me-1"></i>
+                                                            @daysLeft hari lagi
+                                                        </span>
+                                                    }
                                                 }
                                             </td>
                                         </tr>
